add: adicionando controladores, serviços e swagger para patch de estabelecimentos
